@@ -95,6 +95,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-11-02 mer. 23:44]--[2016-11-03 jeu. 00:21] =>  0:37
      CLOCK: [2016-11-01 mar. 23:49]--[2016-11-02 mer. 00:16] =>  0:27
      CLOCK: [2016-11-01 mar. 23:04]--[2016-11-01 mar. 23:46] =>  0:42
      CLOCK: [2016-11-01 mar. 22:01]--[2016-11-01 mar. 22:55] =>  0:54
@@ -226,12 +227,13 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - [X] Then, GameEngine publicly inherits StateManager
   - [-] Move actual GameEngine test in a MainMenu gamestate
     - [X] Create the main class
-    - [ ] Move current GameEngine::run() content to MainMenu gamestate
-      - [ ] Create a simpler GameState::loadLayout function
-	The problem here is with the root window, maybe keep a pointer to this
-	or try to get it each time ?
+    - [-] Move current GameEngine::run() content to MainMenu gamestate
+      - [X] Create a simpler GameState::loadLayout function
+      - [ ] Now, we have to handle events a better way	
       We need a GameState::draw() callback at least for geometrybuffers
 - [ ] May remove the src/client/LoadingBar.* (not used anymore)
+  Maybe keep it to change it to a CEGUI layout, used multiple times
+  When generating local level the first time, when cloning a server etc...
 - [ ] If CI fixed, add image in README.md
 - [ ] These is (again) a segfault when cancel the Ogre3D config dialog
 **** DONE [test_ogre1.9] Let's test if switching to Ogre1.9
